--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,9 +1,45 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Lobster&family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;1,600&family=Roboto:wght@100;300;400;500;700;900&family=Urbanist:wght@700;800;900&display=swap');
 
-$heading-background : #ffab23;
 
-h1{
-    background: $heading-background;
-    font-family: 'Satisfy';
+$secondary_color : rgb(248, 69, 4);
+$nav-background :  rgb(43, 42, 42);
+
+
+.nav{
+    background-color: $nav-background;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: center;
+    .nav__container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        li{
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+        .nav__active{
+            background-color: $secondary_color;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+        .nav__buttons{
+            display: flex;
+            list-style: none;
+            color: white;
+            font-family: 'Poppins';
+            gap: 40px;
+        }
+        .nav__logo{
+            font-family: 'Satisfy';
+            font-size: 24px;
+            color: white;
+            span{
+                color: $secondary_color;
+            }
+        }
+    }
+  
 }
