--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,19 @@
 
 @import 'nav';
+@import 'banner';
+@import 'foods';
+@import 'footer';
 
+$primary_color: #ffffff;
+$secondary_color : rgb(248, 69, 4);
 
 *, *::after, *::before{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+.container{
+    width: 90%;
 }
 
